2009-05-16  Jim Huang  <jserv@0xlab.org>

	* src/mainframe.cpp
	(CMainFrame::OnPreference): Fix dangling else.
	(CMainFrame::OnJumpToPage): Proper casting for INFO.

	* src/notebook.cpp (CNotebook::AddPage): Ditto.

2009-05-16  Jim Huang  <jserv@0xlab.org>

	* src/mainframe.cpp (CMainFrame::OnCloseCon): Use CNotebook wrapper
	interface rather than explicitly casting.
	Patched by Chih-Min Chao <cmchao@gmail.com>.

2009-05-16  Jim Huang  <jserv@0xlab.org>

	* src/nancy_bot/msgdata.cpp: Fix inclusion to make g++ 4.4 happy.

2009-05-16  Jim Huang  <jserv@0xlab.org>

	* src/mainframe.cpp (CMainFrame::OnNotebookPopupMenu): Avoid memory
	leak when event is not mouse right-click and  unnecessary resource
	re-allocation.
	Patched by Chih-Min Chao <cmchao@gmail.com>.

2009-02-18  Jason Xia  <jasonxh@gmail.com>

	* po/POTFILES.in, po/zh_CN.po, po/zh_TW.po: Update po files. Fix
	Simplified Chinese translation of "Line" and "Col".

2009-02-07  Youchen Lee  <copyleft@utcr.org>

	* src/mainframe.cpp: For availability to build under (gtk+ < 2.10),
	defined GTK_STOCK_SELECT_ALL as "gtk-index".

2009-01-25  Jim Huang  <jserv.tw@gmail.com>

	* src/docklet/eggtrayicon.h,
	src/docklet/eggtrayicon.c,
	src/pcmanx_gtk2.cpp: GNOME Goal - Clean up GLib and GTK+ includes.
	GTK+ is moving toward a model where it is only allowed to include the
	'toplevel' headers. Only <glib.h>, <gdk/gdk.h>,
	<gdk-pixbuf/gdk-pixbuf.h> and <gtk/gtk.h> can be directly included.
	The goal is to make all GNOME modules comply with this. 
	Ref: http://live.gnome.org/GnomeGoals/CleanupGTKIncludes

2009-01-19  Jim Huang  <jserv.tw@gmail.com>

	* src/core/termview.h (CTermView::m_s_CharSet): New data member to
	indicate the character set in CTermView.

	* src/core/termview.cpp (CTermView::PasteFromClipboard),
	src/view/telnetview.cpp (CTelnetView::DoPasteFromClipboard): Properly
	handle the character set convertion during copy and paste from X
	clipboard.
	Patched by Darren Hoo <darren.hoo@gmail.com> .
