@@ -1,5 +1,10 @@
 2009-05-16  Jim Huang  <jserv@0xlab.org>
 
+	* src/core/widget.cpp (CWidget::Refresh): Do not call
+	gdk_window_invalidate_rect on a non-realized GtkWidget.
+
+2009-05-16  Jim Huang  <jserv@0xlab.org>
+
 	* src/mainframe.cpp
 	(CMainFrame::OnPreference): Fix dangling else.
 	(CMainFrame::OnJumpToPage): Proper casting for INFO.
